--- a/src/scss/components/sheet/forms/_form-container.scss
+++ b/src/scss/components/sheet/forms/_form-container.scss
@@ -18,7 +18,7 @@
   box-shadow:
     0 8px 32px rgb(0 0 0 / 40%),
     inset 0 1px 0 rgb(255 255 255 / 10%);
-  overflow: hidden;
+  overflow: clip;
   font-family: var(--erps-ui-font, sans-serif);
 
   // Theme-aware background with pattern
